syntax = "proto3";

package sistemaarquivos;

option java_package = "com.mycompany.ine5418";
option java_outer_classname = "SistemaArquivosProto";

service SistemaArquivos{
    rpc Abre (AbreRequest) returns (AbreReply);
    rpc Le (LeRequest) returns (LeReply);
    rpc Escreve (EscreveRequest) returns (EscreveReply);
    rpc Fecha (FechaRequest) returns (FechaReply);
}
message AbreRequest {
    string nome_arquivo = 1;
}

message AbreReply {
    int32 status = 1;
    int32 descritor = 2;
}

message LeRequest {
    int32 descritor = 1;
    int32 posicao = 2;
    int32 tamanho = 3;
}

message LeReply {
    int32 status = 1;
    bytes conteudo_ler = 2;
}

message EscreveRequest {
    int32 descritor = 1;
    int32 posicao = 2;
    bytes conteudo_escrever = 3;
}

message EscreveReply {
    int32 status = 1;
    int32 bytes_escritos = 2;
}

message FechaRequest {
    int32 descritor = 1;
}

message FechaReply {
    int32 status = 1;
}